Agregar licencia MIT y actualizar información del proyecto

--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,6 @@
     "nodemon": "^3.0.1"
   },
   "keywords": ["marketing", "education", "attendance"],
-  "author": "",
-  "license": "ISC"
+  "author": "Marketing App Team",
+  "license": "MIT"
 } 
